<resources>
    <string name="app_name">SocialNetworking</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_name">HelloFBSample</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">1627662137510144</string>
    <string name="tiwtter_api_id">KL0iiBAqeDkaVouX5VtGi4Erc</string>
    <string name="exception">Exception: %1$s</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_list_social">ListSocial</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="text_view_facebook">Facebook</string>
    <string name="text_view_twitter">Twitter</string>
    <string name="text_view_search">Search</string>
    <string name="text_view_line">Line</string>
    <string name="text_view_instagram">Instagram</string>
    <string name="text_view_google">Google Plus</string>
    <string name="title_activity_google">GoogleActivity</string>
    <string name="btn_logout_from_google">Sign out Google</string>
    <string name="textview_connect">Connect</string>
    <string name="textview_view_info">View Info</string>
    <string name="textview_all_image">All Images</string>
    <string name="textview_follower">Followers</string>
    <string name="textview_username_profile">User Name:</string>
    <string name="textview_username">Small Text</string>
    <string name="textview_follower_profile">Followers</string>
    <string name="textview_following_profile">Following</string>
    <string name="textview_following">Following</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_instagram">InstagramActivity</string>
    <string name="title_activity_relationship">RelationshipActivity</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
</resources>
