<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.vynv.socialnetworking.InstagramActivity">


    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dip"
        android:text="Connect" />
    <LinearLayout
        android:id="@+id/llAfterLoginView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/btnViewInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:text="@string/textview_view_info" />

        <Button
            android:id="@+id/btnGetAllImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:text="@string/textview_all_image" />

        <Button
            android:id="@+id/btnFollows"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:text="@string/textview_follower" />

        <Button
            android:id="@+id/btnFollowing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:text="@string/textview_following" />
    </LinearLayout>

</LinearLayout>
